--- a/css/loginstyle.css
+++ b/css/loginstyle.css
@@ -51,15 +51,15 @@ main {
   margin: auto;
   margin-top: 100px;
 }
-.contenedor__todo {
+.contenedorTodo {
   width: 100%;
-  max-width: 800px;
+  max-width: 820px;
   margin: auto;
   position: relative;
 }
-.caja__trasera {
+.cajaTrasera {
   width: 100%;
-  padding: 10px 20px;
+  padding: 10px 10px;
   display: flex;
   justify-content: center;
   backdrop-filter: blur(10px);
@@ -72,22 +72,22 @@ main {
     #a8eb12
   );
 }
-.caja__trasera div {
+.cajaTrasera div {
   margin: 100px 40px;
   color: white;
   transition: all 500ms;
 }
 
-.caja__trasera div p,
-.caja__trasera div button {
-  margin-top: 30px;
+.cajaTrasera div p,
+.cajaTrasera div button {
+  margin-top: 20px;
 }
 
-.caja__trasera div h3 {
+.cajaTrasera div h3 {
   font-weight: 400;
   font-size: 26px;
 }
-.caja__trasera button {
+.cajaTrasera button {
   padding: 10px 40px;
   border: 2px solid #fff;
   background: transparent;
@@ -98,12 +98,12 @@ main {
   outline: none;
   transform: all 300ms;
 }
-.caja__trasera button:hover {
+.cajaTrasera button:hover {
   background: #fff;
   color: #008793;
 }
 /*-- Formularios --*/
-.contenedor__login-register {
+.contenedorLoginRegister {
   display: flex;
   align-items: center;
   width: 100%;
@@ -115,20 +115,20 @@ main {
   transition: left 500ms cubic-bezier(0.175, 0.885, 0.320, 1.275);
 }
 
-.contenedor__login-register form {
+.contenedorLoginRegister form {
   width: 100%;
   padding: 80px 10px;
   background: #fff;
   position: absolute;
   border-radius: 20px;
 }
-.contenedor__login-register form h2 {
+.contenedorLoginRegister form h2 {
   font-size: 30px;
   text-align: center;
   margin-bottom: 10px;
   color: #008793;
 }
-.contenedor__login-register form input {
+.contenedorLoginRegister form input {
   width: 100%;
   margin-top: 20px;
   padding: 20px;
@@ -137,7 +137,7 @@ main {
   font-size: 16px;
   outline: none;
 }
-.contenedor__login-register form button {
+.contenedorLoginRegister form button {
   padding: 10px 40px;
   margin-top: 40px;
   border: none;
@@ -147,11 +147,11 @@ main {
   cursor: pointer;
   outline: none;
 }
-.formulario__login {
+.formularioLogin {
   opacity: 1;
   display: block;
 }
-.formulario__register {
+.formularioRegister {
   display: none;
 }
 /*-- Trabajando en el responsive Design--*/
@@ -160,25 +160,25 @@ main {
   main {
     margin-top: 50px;
   }
-  .caja__trasera {
+  .cajaTrasera {
     max-width: 350px;
     height: 300px;
     flex-direction: column;
     margin: auto;
   }
-  .caja__trasera div {
+  .cajaTrasera div {
     margin: 0px;
     position: absolute;
   }
 
   /*-- Formularios --*/
 
-  .contenedor__login-register {
+  .contenedorLoginRegister {
     top: -10px;
     left: -5px;
     margin: auto;
   }
-  .contenedor__login-register form {
+  .contenedorLoginRegister form {
     position: relative;
   }
 }
