--- a/css/style.css
+++ b/css/style.css
@@ -73,24 +73,21 @@ a {
 }
 footer {
   display: flex;
-  padding: 20px;
-  font-size: 25px;
-  border-radius: 10px;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
   align-items: center;
-  justify-content: center;
-  height: 100px;
-  border-radius: 20px;
-  margin-left: 150px;
-}
-.precio {
-  color: rgb(253, 251, 251);
+  width: 100vh;
+  height: 50px;
+ 
 
+}
+div.precio {
+  color: rgb(253, 251, 251);
   background-color: rgb(37, 143, 192);
-  border: 2px solid mintcream;
-  justify-content: center;
-  text-align: center;
-  width: 214px;
-  min-width: 100px;
+  border: 1px solid mintcream;
+
+  
 }
 
 .card {
@@ -169,9 +166,10 @@ footer {
   padding-top: 10%;
   width: 250px;
   height: 300px;
+  font-display: center;
 }
 #caja1 {
-  background-color: rgba(0, 0, 0, 0.767);
+  background-color: rgba(247, 22, 236, 0.767);
   color: azure;
 }
 #caja2 {
